more work on dissertation

--- a/doc/dissertation/chapter2.tex
+++ b/doc/dissertation/chapter2.tex
@@ -31,14 +31,14 @@
 %===============================================================================
 \subsection{Low-Order Viscosity\label{sec:low_order_viscosity}}
   \input{content/low_order/low_order_viscosity}
-\subsection{The Low-Order System}
+\subsection{The Low-Order System\label{sec:low_order_system}}
   \input{content/low_order/low_order_system}
 \subsection{M-Matrix Property}
   \input{content/low_order/m_matrix}
 \subsection{Discrete Maximum Principles\label{sec:DMP}}
   \input{content/low_order/steadystate_DMP}
   \input{content/low_order/explicit_DMP}
-%  \input{content/low_order/theta_DMP}
+  \input{content/low_order/theta_DMP}
 %===============================================================================
 \section{High-Order Schemes}  
 %===============================================================================
@@ -53,10 +53,13 @@
 %===============================================================================
 \section{FCT Schemes}  
 %===============================================================================
-%\subsection{The FCT System}
-%  \input{content/fct/fct_system}
-%\subsection{Limiting Coefficients}
-%  \input{content/fct/limiting coefficients}
+\subsection{The FCT System}
+  \input{content/fct/fct_system}
+\subsection{Limiting Coefficients\label{sec:limiting_coefficients}}
+  \input{content/fct/limiting_coefficients}
+  \input{content/fct/limited_flux_bounds_steady_state}
+  \input{content/fct/limited_flux_bounds_explicit_euler}
+  \input{content/fct/limited_flux_bounds_theta}
 %===============================================================================
 \section{Implementation}  
 %===============================================================================
