--- a/doc/dissertation/content/low_order/explicit_DMP.tex
+++ b/doc/dissertation/content/low_order/explicit_DMP.tex
@@ -28,8 +28,8 @@ support of degree of freedom $i$.
 \end{theorem}
 
 \begin{proof}
-Evaluating row $i$ of Equation \eqref{eq:semidiscretelow} with Explicit Euler
-and rearranging,
+Evaluating row $i$ of the low-order Explicit Euler system, given by Equation
+\eqref{eq:low_explicit_euler}, and rearranging,
 \[
    \solutionletter_i^{L,n+1}
    = \solutionletter_i^n
