--- a/doc/dissertation/content/low_order/theta_DMP.tex
+++ b/doc/dissertation/content/low_order/theta_DMP.tex
@@ -1,61 +1,86 @@
-%--------------------------------------------------------------------------------
-\subsubsection{Theta Scheme}
-%--------------------------------------------------------------------------------
-\begin{theorem}{$\theta$-Scheme Discrete Maximum Principle}{}
+\begin{theorem}{Theta Scheme Discrete Maximum Principle}
 If the CFL-like condition
-\begin{equation}\label{theta_CFL}
-   \Delta t \leq \frac{m_i}{(1-\theta)A_{i,i}^L}\quad\forall i
+\begin{equation}\label{eq:theta_cfl}
+   \timestepsize \leq \frac{\massmatrixletter^L_{i,i}}{(1-\theta)
+     \ssmatrixletter_{i,i}^L}\quad\forall i
    \qquad\Longleftrightarrow\qquad
-   1 - \frac{(1-\theta)\Delta t}{m_i}A_{i,i}^L \geq 0\quad\forall i
+   1 - \frac{(1-\theta)\timestepsize}{\massmatrixletter^L_{i,i}}
+     \ssmatrixletter_{i,i}^L
+     \geq 0\quad\forall i
 \end{equation}
-is satisfied, then the low-order solution  obtained using the $\theta$-scheme
+is satisfied, then the low-order solution obtained using the Theta scheme
 satisfies the following discrete maximum principle:
-\begin{equation}\label{theta_max_principle}
-   W_i^-\leq U_i^{L,n+1}\leq W_i^+\quad\forall i,
+\begin{equation}\label{eq:theta_dmp}
+  \DMPbound_i^-\leq \solutionletter_i^{L,n+1}\leq \DMPbound_i^+
+  \quad\forall i \eqc
 \end{equation}
 where
-\begin{equation}\label{theta_W}
-   W_i^\pm \equiv \frac{1}{1+\frac{\theta\Delta t}{m_i}A_{i,i}^L}
-     \left[\left(1 - \frac{(1-\theta)
-     \Delta t}{m_i}\sum\limits_j A_{i,j}^L\right)U_{\substack{\max\\\min},i}^n
-    -\frac{\theta\Delta t}{m_i}\sum\limits_{j\ne i}A_{i,j}^L
-     U_{\substack{\max\\\min},i}^{L,n+1}
-    +\frac{\Delta t}{m_i}\left((1-\theta)b_i^n + \theta b_i^{n+1}\right)\right],
-\end{equation}
-where $U_{\substack{\max\\\min},i}^n = \substack{\max\\\min\limits_{j\in
-\mathcal{I}(S_i)}}U_j^n$,
-$U_{\substack{\max\\\min},i}^{L,n+1} = \substack{\max\\\min\limits_{j\in
-\mathcal{I}(S_i)}}U_j^{L,n+1}$,
-and $\mathcal{I}(S_i)$ is the set of indices of degrees of freedom in the
+\begin{multline}\label{eq:theta_bounds}
+   \DMPbound_i^\pm
+   \equiv \frac{1}{1+\frac{\theta\timestepsize}{\massmatrixletter^L_{i,i}}
+     \ssmatrixletter_{i,i}^L}\Bigg[\pr{1
+     - \frac{(1-\theta)\timestepsize}{\massmatrixletter^L_{i,i}}
+       \sumj\ssmatrixletter_{i,j}^L}\solutionletter_{\substack{\max\\\min},i}^n
+     - \frac{\theta\timestepsize}{\massmatrixletter^L_{i,i}}
+       \sumjnoti\ssmatrixletter_{i,j}^L
+       \solutionletter_{\substack{\max\\\min},i}^{L,n+1}
+     \\
+     + \frac{\timestepsize}{\massmatrixletter^L_{i,i}}\pr{(1-\theta)
+       \ssrhsletter_i^n + \theta\ssrhsletter_i^{n+1}}\Bigg] \eqc
+\end{multline}
+\[
+  \solutionletter_{\substack{\max\\\min},i}^n
+  = \substack{\max\\\min\limits_{j\in\indicescell[\support_i]}}
+    \solutionletter_j^n
+  \eqc \quad
+  \solutionletter_{\substack{\max\\\min},i}^{L,n+1}
+  = \substack{\max\\\min\limits_{j\in\indicescell[\support_i]}}
+  \solutionletter_j^{L,n+1}
+  \eqc
+\]
+and $\indicescell[\support_i]$ is the set of indices of degrees of freedom in the
 support of degree of freedom $i$.
 \end{theorem}
 \begin{proof}
-Evaluating row $i$ of Equation \eqref{semidiscretelow} with the $\theta$-scheme,
+Evaluating row $i$ the low-order Theta system, given by Equation
+\eqref{eq:low_theta},
 \[
-  m_i\frac{U_i^{L,n+1}-U_i^n}{\Delta t}+\sum\limits_j A_{i,j}^L \left((1-\theta) U_j^n
-  + \theta U_j^{L,n+1}\right) = (1-\theta)b_i^n + \theta b_i^{n+1},
+  \massmatrixletter^L_{i,i}\frac{\solutionletter_i^{L,n+1}-\solutionletter_i^n}
+    {\timestepsize} + \sumj\ssmatrixletter_{i,j}^L \pr{(1-\theta)
+     \solutionletter_j^n
+  + \theta\solutionletter_j^{L,n+1}}
+  = (1-\theta)\ssrhsletter_i^n + \theta \ssrhsletter_i^{n+1},
 \]
 and rearranging,
-\[
-   U_i^{L,n+1} = \frac{1}{1+\frac{\theta\Delta t}{m_i}A_{i,i}^L}
-     \left[\left(1 - \frac{(1-\theta)\Delta t}{m_i}A_{i,i}^L\right)U_i^n
-    -\frac{\Delta t}{m_i}\sum\limits_{j\ne i}A_{i,j}^L
-     \left(\theta U_j^{L,n+1}
-    +(1-\theta) U_j^n\right)
-    +\frac{\Delta t}{m_i}\left((1-\theta)b_i^n + \theta b_i^{n+1}\right)\right].
-\]
-By Lemma \ref{offdiagonalnegative}, it is known that the off-diagonal
-elements $A^L_{i,j}, j\ne i$, are non-positive, and by Equation \eqref{theta_CFL}
-the term $1 - \frac{(1-\theta)\Delta t}{m_i}A_{i,i}^L$ is non-negative.
-Thus, the following inequality is able to be applied:
-\[
-   U_i^L \le
-     \frac{1}{1+\frac{\theta\Delta t}{m_i}A_{i,i}^L}
-     \left[\left(1 - \frac{(1-\theta)
-     \Delta t}{m_i}\sum\limits_j A_{i,j}^L\right)U_{\max,i}^n
-    -\frac{\theta\Delta t}{m_i}\sum\limits_{j\ne i}A_{i,j}^L
-     U_{\max,i}^{L,n+1}
-    +\frac{\Delta t}{m_i}\left((1-\theta)b_i^n + \theta b_i^{n+1}\right)\right],
-\]
+\begin{multline*}
+   \solutionletter_i^{L,n+1}
+   = \frac{1}{1+\frac{\theta\timestepsize}{\massmatrixletter^L_{i,i}}
+       \ssmatrixletter_{i,i}^L}
+     \Bigg[\pr{1 - \frac{(1-\theta)\timestepsize}{\massmatrixletter^L_{i,i}}
+     \ssmatrixletter_{i,i}^L}\solutionletter_i^n
+     \\
+     - \frac{\timestepsize}{\massmatrixletter^L_{i,i}}\sumjnoti
+       \ssmatrixletter_{i,j}^L
+     \pr{\theta\solutionletter_j^{L,n+1} + (1-\theta)\solutionletter_j^n}
+     + \frac{\timestepsize}{\massmatrixletter^L_{i,i}}
+       \pr{(1-\theta)\ssrhsletter_i^n + \theta\ssrhsletter_i^{n+1}}\Bigg] \eqp
+\end{multline*}
+By Lemma \ref{lem:offdiagonalnegative}, it is known that the off-diagonal
+elements $\ssmatrixletter^L_{i,j}, j\ne i$, are non-positive, and by Equation
+\eqref{eq:theta_cfl} the term $1 -
+\frac{(1-\theta)\timestepsize}{\massmatrixletter^L_{i,i}}\ssmatrixletter_{i,i}^L$
+is non-negative. Thus, the following inequality is able to be applied:
+\begin{multline*}
+   \solutionletter_i^L
+   \le \frac{1}{1+\frac{\theta\timestepsize}{\massmatrixletter^L_{i,i}}
+     \ssmatrixletter_{i,i}^L}
+     \Bigg[\pr{1 - \frac{(1-\theta)\timestepsize}{\massmatrixletter^L_{i,i}}
+       \sumj\ssmatrixletter_{i,j}^L}\solutionletter_{\max,i}^n
+       - \frac{\theta\timestepsize}{\massmatrixletter^L_{i,i}}
+         \sumjnoti\ssmatrixletter_{i,j}^L \solutionletter_{\max,i}^{L,n+1}
+     \\
+       + \frac{\timestepsize}{\massmatrixletter^L_{i,i}}
+         \pr{(1-\theta)\ssrhsletter_i^n + \theta\ssrhsletter_i^{n+1}}\Bigg] \eqc
+\end{multline*}
 and similarly for the lower bound.\qed
 \end{proof}
