more work on dissertation

--- a/doc/dissertation/chapter2.tex
+++ b/doc/dissertation/chapter2.tex
@@ -18,6 +18,8 @@
 %===============================================================================
 \subsection{Spatial Discretization\label{sec:spatial_discretization}}
   \input{content/discretization/spatial_discretization}
+  \subsubsection{The Shallow Water Equations}
+  \input{content/discretization/shallowwater}
 \subsection{Temporal Discretization\label{sec:temporal_discretization}}
   \subsubsection{Explicit Euler Scheme}
     \input{content/discretization/explicit_euler}
