--- a/doc/dissertation/content/newestcommands.tex
+++ b/doc/dissertation/content/newestcommands.tex
@@ -29,6 +29,7 @@
 \newcommand{\volume}{V}
 \newcommand{\testfunction}{\varphi}
 \newcommand{\support}{S}
+\newcommand{\maxdof}{N}
 
 % local viscous bilinear form
 \newcommand{\localviscbilinearform}[3]{b_#1(\testfunction_#2, \testfunction_#3)}
@@ -49,7 +50,7 @@
 \newcommand{\consfluxscalar}[1][\scalarsolution]{\mathbf{\consfluxletter}(#1)}
 \newcommand{\consfluxvector}{\mathbf{\MakeUppercase{\consfluxletter}}
   (\vectorsolution)}
-\newcommand{\conssource}{\mathbf{S}(\vectorsolution)}
+\newcommand{\conssource}{\mathbf{s}(\vectorsolution)}
 
 % viscosity
 \newcommand{\viscosity}{\nu}
