--- a/doc/dissertation/content/newestcommands.tex
+++ b/doc/dissertation/content/newestcommands.tex
@@ -156,6 +156,7 @@
 \newcommand{\momentum}{\mathbf{m}}
 \newcommand{\pressure}{p}
 \newcommand{\gasconstant}{\gamma}
+\newcommand{\identity}{\mathbf{I}}
 
 % shallow water equations
 \newcommand{\height}{h}
