--- a/doc/dissertation/content/newestcommands.tex
+++ b/doc/dissertation/content/newestcommands.tex
@@ -13,7 +13,7 @@
 % solution
 \newcommand{\scalarsolution}{u}
 \newcommand{\vectorsolution}{\mathbf{\scalarsolution}}
-\newcommand{\approximatescalarsolution}{\scalarsolution_h}
+\newcommand{\approximatescalarsolution}{\tilde{\scalarsolution}}
 \newcommand{\solutionletter}{U}
 \newcommand{\solutionvector}{\mathbf{\solutionletter}}
 \newcommand{\lowordersolution}[1][]{
@@ -40,7 +40,7 @@
 
 % entropy viscosity
 \newcommand{\entropy}{\eta}
-\newcommand{\entropyjump}{J}
+\newcommand{\entropyjump}{\mathcal{J}}
 \newcommand{\entropyresidual}{\mathcal{R}}
 \newcommand{\entropyresidualcoef}{c_\entropyresidual}
 \newcommand{\entropyjumpcoef}{c_\entropyjump}
