--- a/doc/dissertation/references.bib
+++ b/doc/dissertation/references.bib
@@ -1,3 +1,12 @@
+@inproceedings{goutal1997,
+  author = {N. Goutal and F. Maurel},
+  title = {Technical Report HE-43/97/016/A},
+  booktitle = {Proceedings of the 2nd Workshop on Dam-Break Wave Simulation},
+  year = {1997},
+  organization = {Electricit de France, Department Laboratoire National
+    d'Hydraulique, Groupe Hydraulique Fluviale}
+}
+
 @article{fjordholm2011,
  author = {Fjordholm, Ulrik S. and Mishra, Siddhartha and Tadmor, Eitan},
  title = {Well-balanced and Energy Stable Schemes for the Shallow Water Equations with Discontinuous Topography},
