altered doc for shallowwater to include bathymetry in entropy flux

--- a/doc/dissertation/content/newestcommands.tex
+++ b/doc/dissertation/content/newestcommands.tex
@@ -183,9 +183,10 @@
 \newcommand{\half}{\frac{1}{2}}
 
 % derivatives
+\newcommand{\dd}[2]{\frac{d #1}{d #2}}               % ordinary derivative
 \newcommand{\pd}[2]{\frac{\partial #1}{\partial #2}} % partial derivative
-\newcommand{\ddt}[1]{\frac{d#1}{dt}}                 % ordinary d/dt
 \newcommand{\ppt}[1]{\pd{#1}{t}}                     % partial d/dt
+\newcommand{\ddt}[1]{\frac{d#1}{dt}}                 % ordinary d/dt
 
 % typesetting
 \newcommand{\pr}[1]{\left(#1\right)} % parentheses
