--- a/doc/notes/methodology/methodology.tex
+++ b/doc/notes/methodology/methodology.tex
@@ -30,9 +30,14 @@
 %===============================================================================
 \section{High-Order Schemes}  
 %===============================================================================
-\subsection{Entropy Viscosity}
+\subsection{Entropy Viscosity\label{sec:entropy_viscosity}}
+  \subsubsection{Entropy Viscosity for Scalar Conservation Law Equations
+    \label{sec:entropy_viscosity_scalar}}
+    \input{../../dissertation/content/high_order/EV_scalar}
   \subsubsection{Entropy Viscosity for the Shallow Water Equations}
     \input{../../dissertation/content/high_order/EV_shallowwater}
+\subsection{The High-Order System}
+  \input{../../dissertation/content/high_order/high_order_system}
 
 %===============================================================================
 \section*{References}
