--- a/doc/dissertation/content/high_order/EV_shallowwater.tex
+++ b/doc/dissertation/content/high_order/EV_shallowwater.tex
@@ -60,15 +60,16 @@ solution variable are the following:
 To arrive at an entropy equality, each conservation equation in the system
 is multiplied by the respective derivative of the entropy function and then
 summed:
-\[
+\begin{equation}
   \highlightblue{\partial_\height\entropy\,\partial_\timevalue\height
   + \partial_\heightmomentum\entropy\cdot\partial_\timevalue\heightmomentum}
   + \highlightgreen{\partial_\height\entropy\,\divergence
     \mathbf{\consfluxletter}^\height
   + \partial_\heightmomentum\entropy\cdot\pr{\divergence 
-    \mathbf{\consfluxletter}^\heightmomentum}}
-  = - \partial_\heightmomentum\entropy\cdot\gravity\height\nabla\bathymetry \eqc
-\]
+    \mathbf{\consfluxletter}^\heightmomentum}
+  + \partial_\heightmomentum\entropy\cdot\gravity\height\nabla\bathymetry}
+  = 0 \eqc 
+\end{equation}
 where the terms highlighted in blue show the \emph{temporal} derivative terms
 and the terms highlighted in green show the \emph{spatial} derivative terms.
 Using Equation \eqref{eq:shallowwater_chainrule}, the temporal derivatives
@@ -78,8 +79,9 @@ can be expressed as a partial derivative of entropy:
   + \highlightgreen{\partial_\height\entropy\,\divergence
     \mathbf{\consfluxletter}^\height
   + \partial_\heightmomentum\entropy\cdot\pr{\divergence
-    \mathbf{\consfluxletter}^\heightmomentum}}
-  = - \partial_\heightmomentum\entropy\cdot\gravity\height\nabla\bathymetry \eqp
+    \mathbf{\consfluxletter}^\heightmomentum}
+  + \partial_\heightmomentum\entropy\cdot\gravity\height\nabla\bathymetry}
+  = 0 \eqp
 \end{equation}
 An \emph{entropy flux} $\mathbf{\consfluxletter}^\entropy$, is defined such
 that its divergence matches the spatial derivative terms in Equation
@@ -87,7 +89,7 @@ that its divergence matches the spatial derivative terms in Equation
 \begin{equation}\label{eq:shallowwater_entropy_equality}
   \highlightblue{\partial_\timevalue\entropy}
   + \highlightgreen{\divergence\mathbf{\consfluxletter}^\entropy}
-  = - \partial_\heightmomentum\entropy\cdot\gravity\height\nabla\bathymetry \eqp
+  = 0 \eqp
 \end{equation}
 Comparing Equations \eqref{eq:shallowwater_spatial_derivative_expanded} and
 \eqref{eq:shallowwater_entropy_equality} gives the definition of the
@@ -99,13 +101,7 @@ divergence of the entropy flux:
     \mathbf{\consfluxletter}^\height
   + \partial_\heightmomentum\entropy\cdot
     \pr{\divergence\mathbf{\consfluxletter}^\heightmomentum}
-  \nonumber\\
-  \nabla\cdot\mathbf{\consfluxletter}^\entropy
-  &= 
-    \partial_\height\entropy\,\divergence
-    \mathbf{\consfluxletter}^\height
-  + \partial_\heightmomentum\entropy\cdot
-    \pr{\divergence\mathbf{\consfluxletter}^\heightmomentum}
+  + \partial_\heightmomentum\entropy\cdot\gravity\height\nabla\bathymetry
   \nonumber\\
   \nabla\cdot\mathbf{\consfluxletter}^\entropy
   &= 
@@ -114,6 +110,7 @@ divergence of the entropy flux:
     \divergence\mathbf{\consfluxletter}^\height
     + \frac{\heightmomentum}{\height}\cdot
     \pr{\divergence\mathbf{\consfluxletter}^\heightmomentum}
+    + \frac{\heightmomentum}{\height}\cdot\gravity\height\nabla\bathymetry
   \nonumber\\
   \nabla\cdot\mathbf{\consfluxletter}^\entropy
   &= 
@@ -124,6 +121,7 @@ divergence of the entropy flux:
     \pr{\frac{2\heightmomentum}{\height}\divergence\heightmomentum
     + \pr{\gravity\height\identity
     - \frac{\heightmomentum\otimes\heightmomentum}{\height^2}}\cdot\nabla\height}
+    + \gravity\heightmomentum\cdot\nabla\bathymetry
   \nonumber\\\label{eq:shallowwater_divergence_coef}
   \nabla\cdot\mathbf{\consfluxletter}^\entropy
   &= 
@@ -133,66 +131,81 @@ divergence of the entropy flux:
     + \pr{\gravity\heightmomentum
     - \frac{\heightmomentum\cdot(\heightmomentum\otimes\heightmomentum)}
     {\height^3}}\cdot\nabla\height
+    + \gravity\heightmomentum\cdot\nabla\bathymetry
 \end{align}
-Assuming the entropy flux to be a function of $\height$ and $\heightmomentum$
-only, i.e., the entropy flux is
-$\mathbf{\consfluxletter}^\entropy(\height,\heightmomentum)$, and applying
-chain rule for its divergence yields
+Assuming the entropy flux to be a function of $\height$, $\heightmomentum$,
+and $\bathymetry$, i.e., the entropy flux is
+$\mathbf{\consfluxletter}^\entropy(\height,\heightmomentum,\bathymetry)$,
+and applying chain rule for its divergence yields
 \begin{equation}
   \nabla\cdot\mathbf{\consfluxletter}^\entropy
   = \partial_\height\mathbf{\consfluxletter}^\entropy\cdot\nabla\height
   + \partial_\heightmomentum\mathbf{\consfluxletter}^\entropy
-  \,\divergence\heightmomentum \eqp
+  \,\divergence\heightmomentum
+  + \partial_\bathymetry\mathbf{\consfluxletter}^\entropy\cdot\nabla\bathymetry
+  \eqp
 \end{equation}
-Matching the coefficients of $\nabla\height$ and $\divergence\heightmomentum$
+Matching the coefficients of $\nabla\height$, $\divergence\heightmomentum$,
+and $\nabla\bathymetry$
 between this equation and Equation \eqref{eq:shallowwater_divergence_coef}
 gives the definitions of the partial derivatives of the entropy flux:
-\begin{equation}\label{eq:shallowwater_entropy_pds}
+\begin{subequations}
+\begin{equation}\label{eq:shallowwater_entropy_pd_height}
   \partial_\height\mathbf{\consfluxletter}^\entropy
   = \gravity\heightmomentum
   - \frac{\heightmomentum\cdot\pr{\heightmomentum\otimes\heightmomentum}} 
   {\height^3}
-  \eqc\quad
+  \eqc
+\end{equation}
+\begin{equation}\label{eq:shallowwater_entropy_pd_momentum}
   \partial_\heightmomentum\mathbf{\consfluxletter}^\entropy
   = \frac{3}{2}\frac{\heightmomentum\cdot\heightmomentum}{\height^2}
-  + \gravity\height
+  + \gravity\height \eqc
 \end{equation}
+\begin{equation}\label{eq:shallowwater_entropy_pd_bathymetry}
+  \partial_\bathymetry\mathbf{\consfluxletter}^\entropy
+  = \gravity\heightmomentum
+  \eqp
+\end{equation}
+\end{subequations}
 Integrating the equation for $\partial_\height\mathbf{\consfluxletter}^\entropy$
 gives
-\[
+\begin{equation}\label{eq:shallowwater_entropy_flux_with_constant}
   \mathbf{\consfluxletter}^\entropy
   = \gravity\heightmomentum\height
   + \half\frac{\heightmomentum\cdot\pr{\heightmomentum\otimes\heightmomentum}} 
   {\height^2}
-  + c(\heightmomentum) \eqc
-\]
-where $c(\heightmomentum)$ is a constant with respect to $\height$. Taking
-the partial derivative of this expression with respect to $\heightmomentum$
-gives
-\[
+  + c(\heightmomentum, \bathymetry) \eqc
+\end{equation}
+where $c(\heightmomentum, \bathymetry)$ is a constant with respect to $\height$.
+Taking the partial derivative of this expression with respect to
+$\heightmomentum$ gives
+\begin{equation}
   \partial_\heightmomentum\mathbf{\consfluxletter}^\entropy
   = \frac{3}{2}\frac{\heightmomentum\cdot\heightmomentum}{\height^2}
-  + \gravity\height + c'(\heightmomentum) \eqc
-\]
-which when compared to the equation for 
-$\partial_\heightmomentum\mathbf{\consfluxletter}^\entropy$ in Equation
-\eqref{eq:shallowwater_entropy_pds} gives
-$c'(\heightmomentum)=0\Rightarrow c(\heightmomentum)=c$, where
+  + \gravity\height + \pd{c}{\heightmomentum} \eqc
+\end{equation}
+which when compared to Equation \eqref{eq:shallowwater_entropy_pd_momentum}
+gives $\partial_\heightmomentum c=0\Rightarrow c(\heightmomentum,\bathymetry)=
+c(\bathymetry)$.
+Then taking the partial derivative of Equation
+\eqref{eq:shallowwater_entropy_flux_with_constant} with respect to $\bathymetry$
+and using the knowledge $c(\heightmomentum,\bathymetry)\rightarrow c(\bathymetry)$
+gives $\dd{c}{\bathymetry}=0\Rightarrow c(\bathymetry)=c$, where
 $c$ can just be chosen to be zero. Thus the final equation for the
 entropy flux is
 \begin{equation}
   \mathbf{\consfluxletter}^\entropy(\vectorsolution)
-  = \gravity\height\heightmomentum
+  = \gravity(\height + \bathymetry)\heightmomentum
   + \half\frac{\heightmomentum\cdot\pr{\heightmomentum\otimes\heightmomentum}} 
   {\height^2}
   \eqp
 \end{equation}
-Bringing the source term in Equation \eqref{eq:shallowwater_entropy_equality}
-over to the left hand side allows an entropy residual to be defined:
+The entropy residual is defined to be the left hand side of 
+Equation \eqref{eq:shallowwater_entropy_equality}:
 \begin{equation}
   \entropyresidual(\vectorsolution) \equiv \partial_\timevalue\entropy
   + \divergence\mathbf{\consfluxletter}^\entropy
-  + \partial_\heightmomentum\entropy\cdot\gravity\height\nabla\bathymetry
   \eqp
 \end{equation}
 The regularization of the shallow water equations is achieved by adding
